[gd_scene load_steps=12 format=3 uid="uid://b28gjkefgi5bs"]

[ext_resource type="Script" uid="uid://bn6wdd2hwqxfp" path="res://Main/Scripts/main.gd" id="1_6pthk"]
[ext_resource type="Script" uid="uid://u4rstm0uk8wb" path="res://Scripts/Misc/file_importer.gd" id="2_j4lix"]
[ext_resource type="Script" uid="uid://b6atx7ybrp5sq" path="res://Main/Scripts/SpritesContainer.gd" id="2_lv028"]
[ext_resource type="PackedScene" uid="uid://ngta1o5yiqxs" path="res://UI/control.tscn" id="2_micm1"]
[ext_resource type="PackedScene" uid="uid://dw4brgrpdpurf" path="res://Misc/LightSource/light_source.tscn" id="3_eo07p"]
[ext_resource type="Theme" uid="uid://c5v4ocnimqa4i" path="res://Themes/WhiteTheme/WhiteTheme.tres" id="5_4hh1t"]
[ext_resource type="Script" uid="uid://by4pbr6yeut1c" path="res://Main/Scripts/monitor_tracking.gd" id="5_rj11h"]
[ext_resource type="Script" uid="uid://c5idljtng82vs" path="res://Main/Scripts/AudioStreamPlayer.gd" id="5_swrrk"]
[ext_resource type="PackedScene" uid="uid://bpmlfhv30o08l" path="res://UI/EditorUI/TopUI/top_ui.tscn" id="7_qwnpc"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_f6fdm"]
blend_mode = 4

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_b50ir"]

[node name="Main" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6pthk")

[node name="FileImporter" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_j4lix")

[node name="ConfirmTrim" type="ConfirmationDialog" parent="FileImporter"]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(375, 106)
ok_button_text = "Yes"
dialog_text = "Would you like to have your Sprites Trimmed?
(Removes all unused area around your image.)"
cancel_button_text = "No"

[node name="BackgroundInputCapture" type="BackgroundInputCapture" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_f6fdm")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
mouse_target = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
unique_name_in_owner = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Node2D" type="Node2D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true
position = Vector2(640, 360)

[node name="CamPos" type="Node2D" parent="SubViewportContainer/SubViewport/Node2D"]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="SubViewportContainer/SubViewport/Node2D/CamPos"]
unique_name_in_owner = true
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="Origin" type="Node2D" parent="SubViewportContainer/SubViewport/Node2D"]
z_index = 4
texture_filter = 4

[node name="SpritesContainer" type="Node2D" parent="SubViewportContainer/SubViewport/Node2D/Origin"]
unique_name_in_owner = true
script = ExtResource("2_lv028")

[node name="LightSource" parent="SubViewportContainer/SubViewport/Node2D" instance=ExtResource("3_eo07p")]
unique_name_in_owner = true
visible = false
light_mask = 7
visibility_layer = 7
z_index = 4096
z_as_relative = false
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.92549)

[node name="UICanvas" type="CanvasLayer" parent="."]
layer = 2

[node name="Marker" type="Control" parent="UICanvas"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 20)
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("5_rj11h")

[node name="UIHolder" type="VBoxContainer" parent="UICanvas"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("5_4hh1t")
theme_override_constants/separation = -1

[node name="TopUI" parent="UICanvas/UIHolder" instance=ExtResource("7_qwnpc")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0

[node name="Control" parent="UICanvas/UIHolder" instance=ExtResource("2_micm1")]
unique_name_in_owner = true
layout_mode = 2

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(338, 100)
dialog_text = "Do you want to make a new PNGTuber model?"
dialog_autowrap = true

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open File(s)"
initial_position = 2
size = Vector2i(800, 500)
force_native = true
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("*.png", "*.jpeg", "*.jpg", "*.svg")
use_native_dialog = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMicrophone_b50ir")
autoplay = true
bus = &"Mic"
script = ExtResource("5_swrrk")

[node name="MicTimer" type="Timer" parent="AudioStreamPlayer"]
wait_time = 30.0
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="canceled" from="FileImporter/ConfirmTrim" to="FileImporter" method="_on_confirm_trim_canceled"]
[connection signal="close_requested" from="FileImporter/ConfirmTrim" to="FileImporter" method="_on_confirm_trim_canceled"]
[connection signal="confirmed" from="FileImporter/ConfirmTrim" to="FileImporter" method="_on_confirm_trim_confirmed"]
[connection signal="bg_key_pressed" from="BackgroundInputCapture" to="." method="_on_background_input_capture_bg_key_pressed"]
[connection signal="mouse_entered" from="SubViewportContainer" to="." method="_on_sub_viewport_container_mouse_entered"]
[connection signal="mouse_exited" from="SubViewportContainer" to="." method="_on_sub_viewport_container_mouse_exited"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_file_dialog_files_selected"]
[connection signal="timeout" from="AudioStreamPlayer/MicTimer" to="AudioStreamPlayer" method="_on_mic_timer_timeout"]
